Go-EKS-GitHubActions-Terraform-Helm-ArgoCD/chats/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-portfolio
  namespace: go-app
  labels:
    role: go-portfolio
    env: dev
spec:
  replicas: 1  # Use replica count from values.yaml
  selector:
    matchLabels:
      role: go-portfolio
  template:
    metadata:
      labels:
        role: go-portfolio
    spec:
      containers:
      - name: go-portfolio
        image: pooja175shah/go-port:18754908405  # Pull image and tag from values.yaml
       
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
