Go-EKS-GitHubActions-Terraform-Helm-ArgoCD/chats/k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: go-portfolio-svc
  namespace: go-app
spec: 
  ports: 
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector: 
    role: go-portfolio
